force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>FS_Headquarters__c</fullName>
    <label>Headquarters</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Value does not exist or does not match filter criteria for HQ on EP.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Headquarters</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Execution Plans (Headquarters)</relationshipLabel>
    <relationshipName>Execution_Plans1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>