force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_HFCS_sweetener_will_go_where__c.field-meta.xml
<CustomField>
    <fullName>FS_HFCS_sweetener_will_go_where__c</fullName>
    <label>HFCS sweetener will go where?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>FOH -  Underneath dispenser in cabinet</fullName>
            </value>
            <value>
                <fullName>BOH - Existing legacy BIB rack</fullName>
            </value>
            <value>
                <fullName>BOH - New BIB rack</fullName>
            </value>
            <value>
                <fullName>Unknown Ã¢â‚¬â€œ site assessment will determine</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>