force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_IM_Adapter_Lid_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_IM_Adapter_Lid_QTY__c</fullName>
    <label>Lid/IM Adapter QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>