force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Initial_Cartridge_Orders_Processed__c.field-meta.xml
<CustomField>
    <fullName>FS_Initial_Cartridge_Orders_Processed__c</fullName>
    <formula>AND(FS_of_Initial_Order_Processed__c = FS_of_Installations__c  ,
FS_of_Installations__c &gt;0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Initial Cartridge Orders Processed (</label>
    <type>Checkbox</type>
</CustomField>