force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Installation_SP_New_Outlet_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_SP_New_Outlet_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation SP-New Outlet Complete</label>
    <type>Checkbox</type>
</CustomField>