force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Installations_approved_by_PM__c.field-meta.xml
<CustomField>
    <fullName>FS_Installations_approved_by_PM__c</fullName>
    <description>Count of Installations which are approved by PM</description>
    <label>#Installations approved by PM</label>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Execution_Plan_Final_Approval_PM__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Overall_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>