force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Installations_ready_for_PM_approval__c.field-meta.xml
<CustomField>
    <fullName>FS_Installations_ready_for_PM_approval__c</fullName>
    <label># Installations ready for PM approval</label>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Ready_For_PM_Approval__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Overall_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>