force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Is_a_top_mount_ice_maker_planned_Loc__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_a_top_mount_ice_maker_planned_Loc__c</fullName>
    <label>top-mount ice-maker planned for location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>No, manual fill</fullName>
            </value>
            <value>
                <fullName>Yes, Use existing ice-maker if approved</fullName>
            </value>
            <value>
                <fullName>Yes, New ice maker ordered</fullName>
            </value>
            <value>
                <fullName>Yes, If SA determines adequate ceiling height</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>