force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Is_ancillary_equipment_such_Tea_Coffe__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_ancillary_equipment_such_Tea_Coffe__c</fullName>
    <label>ancillary equipment Tea&amp;Coffee removed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>No Ã¢â‚¬â€œ Does not apply to this install</fullName>
            </value>
            <value>
                <fullName>Yes Ã¢â‚¬â€œ Existing Tea &amp; Coffee dispenser(s) will remain in same locations</fullName>
            </value>
            <value>
                <fullName>Yes Ã¢â‚¬â€œ New Tea &amp; Coffee dispensers will be added, details provided in project plan</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>