force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Is_equipment_storage_needed_at_the_SP__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_equipment_storage_needed_at_the_SP__c</fullName>
    <label>Is equipment storage needed at the SP?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>