force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Is_there_a_top_mounted_icemaker__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_there_a_top_mounted_icemaker__c</fullName>
    <label>Is there a top mounted icemaker?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>