force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Is_ths_Sngle_or_Multiple_dispsr_Instl__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_ths_Sngle_or_Multiple_dispsr_Instl__c</fullName>
    <label>Single or Multiple dispenser install?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-None-</fullName>
                <default>true</default>
                <label>-None-</label>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>