force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_JCOM_COM_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_JCOM_COM_Comments__c</fullName>
    <label>Add Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>