force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Label_Kits__c.field-meta.xml
<CustomField>
    <fullName>FS_Label_Kits__c</fullName>
    <label>Label kits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>141958: Barqs/Dr. Pepper label kit</fullName>
            </value>
            <value>
                <fullName>XXXXX: Barqs/Pibb label kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>