force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Label_Kits_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Label_Kits_QTY__c</fullName>
    <label>Label Kits QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>