force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Local_Time__c</fullName>
    <label>Local Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>