force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Min_Install_Date_installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Min_Install_Date_installation__c</fullName>
    <label>Min Install Date installation</label>
    <summarizedField>FS_Installation__c.CreatedDate</summarizedField>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>