force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Misc_Adapter__c.field-meta.xml
<CustomField>
    <fullName>FS_Misc_Adapter__c</fullName>
    <label>Misc Adapter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>46303 Hoshizaki Funnel Kit for Models: KM-280, -320, -500, -501, -515, -630M, -650M &amp; -600MAH</fullName>
            </value>
            <value>
                <fullName>46377 : Hoshizaki Funnel Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>