force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Misc_Adapter_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Misc_Adapter_QTY__c</fullName>
    <label>Misc Adapter QTY</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>