force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Name_of_Disaster_Use_Execution_911__c.field-meta.xml
<CustomField>
    <fullName>FS_Name_of_Disaster_Use_Execution_911__c</fullName>
    <label>Name of Disaster (Use Execution# 911)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>