force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_New_Oulet_Information__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Oulet_Information__c</fullName>
    <formula>FS_New_Outlet__r.FS_Outlet_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Oulet Information</label>
    <type>Text</type>
</CustomField>