force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_New_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Relocation_New_Outlet</relationshipName>
    <type>Lookup</type>
</CustomField>