force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_7000_Series_Dispensers_to_Remove__c.field-meta.xml
<CustomField>
    <fullName>FS_of_7000_Series_Dispensers_to_Remove__c</fullName>
    <label># of 7000 Series to Remove/Replace</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>