force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_7000_Series_Units__c.field-meta.xml
<CustomField>
    <fullName>FS_of_7000_Series_Units__c</fullName>
    <formula>FS_Outlet__r.FS_of_7000_Series_Installations__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From Outlet object</inlineHelpText>
    <label># of 7000 Series Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>