force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_7000_Series_Units_being_relocated__c.field-meta.xml
<CustomField>
    <fullName>FS_of_7000_Series_Units_being_relocated__c</fullName>
    <label># of 7000 Series Units being relocated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>