force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_Crew_Serve_units_being_relocated__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Crew_Serve_units_being_relocated__c</fullName>
    <label># of 8000 Series units being relocated</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>