force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_Initial_Order_Processed__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Initial_Order_Processed__c</fullName>
    <label># of Initial Order Processed</label>
    <summarizedField>FS_Installation__c.of_Initial_Order_Processed__c</summarizedField>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>