force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_Installs_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Installs_Complete__c</fullName>
    <label># of Installs Complete</label>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Overall_Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>