force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_Outlets__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Outlets__c</fullName>
    <label># of Outlets</label>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>