force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_Self_Serve_Installations__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Self_Serve_Installations__c</fullName>
    <label># of 9000 Series installations</label>
    <summarizedField>FS_Installation__c.FS_Eq_SS_Dispenser_QTY__c</summarizedField>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>