force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_of_Self_Serve_to_Remove__c.field-meta.xml
<CustomField>
    <fullName>FS_of_Self_Serve_to_Remove__c</fullName>
    <label># of 9000 Series to Remove / Replace</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>