force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_On_Hold_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_On_Hold_Comments__c</fullName>
    <label>On-Hold Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>