force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Outlet__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Post Install</description>
    <label>Outlet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>FS Outlet</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Post Install Activity</relationshipLabel>
    <relationshipName>Outlet_Post_Execution_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>