force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Outlets_pending_action__c.field-meta.xml
<CustomField>
    <fullName>FS_Outlets_pending_action__c</fullName>
    <description># outlets pending COM action</description>
    <label># outlets pending COM action</label>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Ready_For_PM_Approval__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Execution_Plan_Final_Approval_PM__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FS_Installation__c.FS_Overall_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Installation__c.FS_Execution_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>