force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_PIC__c.field-meta.xml
<CustomField>
    <fullName>FS_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation PC/AC 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Execution_Plans6fZO</relationshipName>
    <type>Lookup</type>
</CustomField>