force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Platform_change_approved__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform_change_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platform change approved?</label>
    <type>Checkbox</type>
</CustomField>