force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Platform_Change_Check__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform_Change_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Platform Change Checkbox. This field is used to drive the overall status from the back end based on the Platform Type/s sync between EP and IP. 
This should not be deleted.</description>
    <label>Platform Change Check?</label>
    <type>Checkbox</type>
</CustomField>