force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Platform_Type__c</fullName>
    <description>multi select picklist</description>
    <label>Platform Type/s</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Types</valueSetName>
    </valueSet>
</CustomField>