force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Platforms_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_Platforms_LastModifiedBy__c</fullName>
    <label>Platform Type/s Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>