force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Platforms_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FS_Platforms_LastModifiedDate__c</fullName>
    <label>Platform Type/s Last Modified Date</label>
    <type>Date</type>
</CustomField>