force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_PM__c.field-meta.xml
<CustomField>
    <fullName>FS_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Execution_Plans5</relationshipName>
    <type>Lookup</type>
</CustomField>