force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Post_Installation_Activity__c.field-meta.xml
<CustomField>
    <fullName>FS_Post_Installation_Activity__c</fullName>
    <label>Post Installation Activity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Removal</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>