force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Post_Installation_Activity_Text__c.field-meta.xml
<CustomField>
    <fullName>FS_Post_Installation_Activity_Text__c</fullName>
    <label>Post Installation Activity Text</label>
    <length>32</length>
    <type>Text</type>
</CustomField>