force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_PP_Approved_Plus_16__c.field-meta.xml
<CustomField>
    <fullName>FS_PP_Approved_Plus_16__c</fullName>
    <formula>IF(MOD(DATEVALUE(FS_ExecutionPlan_Final_Approval_DateTime__c)-DATEVALUE(&quot;1900-01-01&quot;),7)&lt;5,DATEVALUE(FS_ExecutionPlan_Final_Approval_DateTime__c) + 22,DATEVALUE(FS_ExecutionPlan_Final_Approval_DateTime__c)+24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PP Approved Plus 16</label>
    <type>Date</type>
</CustomField>