force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Pump_Kit__c.field-meta.xml
<CustomField>
    <fullName>FS_Pump_Kit__c</fullName>
    <label>Pump Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45916 : HFCS Pump Kit</fullName>
            </value>
            <value>
                <fullName>46022 : High Altitude Pump Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>