force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Rack_A__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack_A__c</fullName>
    <label>Rack A</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45897 : Rack A (16x18)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>