force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Rack_B__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack_B__c</fullName>
    <label>Rack B</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45898 : Rack B (29x18)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>