force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Rack_C__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack_C__c</fullName>
    <label>Rack C</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>45899 : Rack C (41x18)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>