force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Rack_C_QTY__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack_C_QTY__c</fullName>
    <label>Rack C QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>