force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Rack_D__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack_D__c</fullName>
    <label>Rack D</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>44236: 15â€� Wide Single  BIB Rack</fullName>
            </value>
            <value>
                <fullName>44238: 28â€� Wide Double  BIB Rack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>