force-app/main/default/objects/FS_Execution_Plan__c/fields/FS_Rack_D_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Rack_D_Qty__c</fullName>
    <label>Rack D QTY</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>